Fix spacing in css file

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-body{
-      background-color #ccc;
-font-family:sans-serif;
+body {
+  background-color: #666;
+  font-family: sans-serif;
 }
 
 h1 {
@@ -8,4 +8,5 @@ h1 {
 
   article {
   font-style: italic
-color: #666;}
+  color: #666;
+}
